[package]
name = "magic-map"
version = "0.1.0"
edition = "2021"

[dependencies]
bytecheck = { version = "~0.6.8", default-features = false }
rkyv = { version = "0.7.40", features = ["validation", "strict"] }
mmap-sync = "1.0.2"
thiserror = "1.0.61"


[dev-dependencies]
rand = "0.8.5"
criterion = "0.5"

[[bench]]
name = "read"
harness = false
